[package]
name = "picalds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4.0.0"
futures = "0.3.28"
nanoid = "0.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.2", optional = true }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "mysql" ] }
